--- a/FrontEnd/pantalla de inicio/inicio.css
+++ b/FrontEnd/pantalla de inicio/inicio.css
@@ -7,10 +7,21 @@ body {
     display: flex;         
     height: 100vh;  
     align-items: center; 
-    flex-direction: column;
     }
-    .sidebar{
+    .box{
+      width: 200px;           
+      height: 100px;           
+      background-color: rgb(243, 202, 68); 
+      padding: 20px;   
+      margin: 20px;         
+      flex-direction: row;
+      align-content: center;
+
+    }
+
+    .lateral{
         width: 80px;
+        height: 832px;
         background-color: #b3b2b2;
         display: flex;
         flex-direction: column;
