--- a/FrontEnd/pantalla de inicio/inicio.css
+++ b/FrontEnd/pantalla de inicio/inicio.css
@@ -1,29 +1,43 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #ffffff;
-    margin: 0;
-  }
-  .container{
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* dos columnas */
-    gap: 20px;
-    padding: 20px;
-    }
-    .box{
-      width: 200px;           
-      height: 100px;           
-      background-color: rgb(243, 202, 68); 
-      padding: 20px;   
-      margin: 20px;         
-      flex-direction: row;
-      align-content: center;
+body{
+  background-color: rgb(255, 255, 255);
+  
+}
+.contenedor {
+  
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px; 
+  
+}
+.cajarecor{
+  width: 20rem;           
+  height: 15rem;           
+  background-color: rgb(243, 202, 68); 
+  padding: 3rem;   
+  margin: 3rem;         
+  display: flex;
+  flex-direction: row;
+}
+.cajalarga {
+  width: 70rem; 
+  height: 5rem;             
+  background-color: rgb(247, 181, 51);
+  padding: 20px;
+  margin-top: 20px;
+  margin-left: 3rem;
+  align-items: center;   
+  justify-content: center; 
+}
+.sidebar {
+  width: 7rem;                  
+  background-color: rgb(100, 100, 150); 
+  padding: 20px;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-top: 20px;
+}
 
-    }
-    .tareas {
-      grid-column: 1 / span 2; /* ocupa las dos columnas */
-      grid-row: 3;             /* va en la segunda fila */
-      width: 70rem;           
-      height: 100px;           
-      background-color: rgb(243, 202, 68);  
-      margin-left: auto;
-    }  
+.layout {
+  display: flex;
+  height: 100vh; 
+   }
