--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
@@ -18,11 +18,24 @@ h2 {
 #Logo {
     display: block;
     margin-left: auto;
-    margin-right: auto; /* averiguar bien que es esto que no estoy seguro  */
+    margin-right: auto; 
     width: 250px; 
 }
 .boton{
+    gap: 10px;      
+    margin: 8px 0;  
+    position: relative;
+ }
+
+ .Is{
+    font-size: 1rem;
     display: flex;
    flex-direction: column;
    align-items: center;
+   background-color: peru;
+    width: 2rerm;  
+    border-radius: 8px; 
+    width: 16rem;             
+    height: 3rem;    
+    margin-top: 1rem;
  }
