--- a/FrontEnd/pantalla de inicio/inicio.css
+++ b/FrontEnd/pantalla de inicio/inicio.css
@@ -33,20 +33,34 @@ body{
 }
 
 .cajalarga {
-  width: calc(100%); 
+  width: 95%; 
+  max-width: 100vw; 
   height: 5rem;
   background-color: rgb(230, 105, 21);
   padding: 20px;
-  margin-left: 7rem; 
+  margin: 1rem;
   align-items: center;
   justify-content: center;
-  display: flex; 
+  display: flex;
+  border-radius: 10px;
 }
 .sidebar {
   width: 7rem; 
   background-color: rgb(100, 100, 150);
   padding: 20px;
   margin-top: 20px;
+  border-radius: 10px;
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  gap: 10px; 
+}
+
+.circulos{
+  width: 3rem; 
+  height: 3rem; 
+  background-color: rgb(230, 105, 21); 
+  border-radius: 50%; 
 }
 
 .layout {
