--- a/FrontEnd/Recordatorios/recordatorios.css
+++ b/FrontEnd/Recordatorios/recordatorios.css
@@ -1,5 +1,22 @@
 header{
+   margin left: 7rem;
    font-size: 2rem;
    font-family: Arial, Helvetica, sans-serif;
 }
-
+.sidebar {
+   width: 7rem; 
+   background-color: rgb(100, 100, 150);
+   padding: 20px;
+   margin-top: 20px;
+   border-radius: 10px;
+   display: flex; 
+   flex-direction: column; 
+   align-items: center; 
+   gap: 10px; 
+ }
+ .layout {
+   display: flex;
+   height: 100vh; 
+   flex-direction: row; 
+ }
+ 
