--- a/FrontEnd/Recordatorios/recordatorios.css
+++ b/FrontEnd/Recordatorios/recordatorios.css
@@ -47,16 +47,15 @@ body {
 }
 
 .header h1 {
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: bold;
   margin: 0;
 }
 
 .botonagregar {
   background-color: rgb(210, 210, 210);
-  border: none;
-  width: 100%;
-  height: 50px;
+  width: 10rem;
+  height: 12rem;
   border-radius: 8px;
   font-size: 2rem;
   cursor: pointer;
