--- a/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
+++ b/FrontEnd/inicio de sesión WF/Primer Wire Frame.css
@@ -41,3 +41,10 @@ h2 {
     height: 3rem;
     margin-top: 1rem;
 }
+
+
+.texto-recordatorio a,
+.dato-recordatorio a {
+    color: black;
+    text-decoration: none;
+}
