--- a/FrontEnd/crear cuenta/CC.css
+++ b/FrontEnd/crear cuenta/CC.css
@@ -19,7 +19,7 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto; 
-    width: 250px; 
+    width: 10rem; 
 }
 .boton{
     display: flex;
